--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -25,7 +25,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
-			<img class="loader" src="../IMG/Pokeball-Image-Color.png" width="10rem" height="auto" alt="Pokeball animation chargement de page" loading="lazy" />
+			<img class="loader" src="../IMG/Pokeball-Image-Color.png" width="160" alt="Pokeball animation chargement de page" loading="lazy" />
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
@@ -34,18 +34,18 @@
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="../index.html" aria-label="Retour à l'accueil">
-					<img src="../IMG/Logo-Pokemon-128.png" width="2rem" height="auto" alt="Logo RocketDev" />
+					<img src="../IMG/Logo-Pokemon-128.png" width="32" alt="Logo RocketDev" />
 				</a>
 
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" alt="Icon dark light mode switch" loading="lazy" aria-hidden="true" />
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="24" alt="Icon dark light mode switch" loading="lazy" aria-hidden="true" />
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" required aria-label="Recherche" placeholder="Recherche" />
 						<div>
-							<input type="submit" id="searchSubmit" aria-label="Changer de mode" placeholder="Rechercher" />
+							<input type="submit" id="searchSubmit" aria-label="Changer de mode" />
 							<i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
 						</div>
 					</form>
@@ -73,7 +73,7 @@
 							</div>
 							<!-- Add pokemon team -->
 							<div>
-								<button class="cta secondaryButton" aria-label="Supprimer le Pokémon" id="removePokemon">
+								<button class="cta secondaryButton" aria-label="Supprimer le Pokémon" id="ovePokemon">
 									Supprimer
 									<i id="styleIconDelete" class="fa-solid fa-plus" aria-hidden="true"></i>
 								</button>
@@ -115,22 +115,22 @@
 								<span class="secondaryText subText">Pokémons</span>
 								<div>
 									<button class="circle circleActive" id="pokemon1">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 									<button class="circle" id="pokemon2">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 									<button class="circle" id="pokemon3">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 									<button class="circle" id="pokemon4">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 									<button class="circle" id="pokemon5">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 									<button class="circle" id="pokemon6">
-										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32px" alt="Pokeball icon" />
+										<img src="../IMG/ICONS/ICONS__ic_round-catching-pokemon.png" width="32" alt="Pokeball icon" />
 									</button>
 								</div>
 							</div>
@@ -138,7 +138,7 @@
 					</div>
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
-						<img src="#" id="imgPokemon" width="40rem" height="auto" alt="Pokemon de présentation" />
+						<img src="#" id="imgPokemon" width="640" alt="Pokemon de présentation" />
 						<div id="bgPokeball" aria-hidden="true"></div>
 					</figure>
 				</div>
