--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -73,7 +73,7 @@
 							</div>
 							<!-- Add pokemon team -->
 							<div>
-								<button class="cta secondaryButton" aria-label="Supprimer le Pokémon" id="ovePokemon">
+								<button class="cta secondaryButton" aria-label="Supprimer le Pokémon" id="removePokemon">
 									Supprimer
 									<i id="styleIconDelete" class="fa-solid fa-plus" aria-hidden="true"></i>
 								</button>
