--- a/HTML_PAGES/error-page.html
+++ b/HTML_PAGES/error-page.html
@@ -56,7 +56,7 @@
 					<!-- Section informations pokemon Zf -->
 					<div class="PokemonInfos">
 						<!-- Name pokemon -->
-						<h1 class="PokemonName titleText">Erreur 404, un Missingno est apparu !</h1>
+						<h1 class="PokemonName titleText">Erreur 404, un MissingNo est apparu !</h1>
 						<span class="IdPokemon">"C'est trop dangereux ici, tu dois partir avant qu'il ne soit trop tard !"</span>
 
 						<nav class="sectionCardNav">
